# SPM

./: .gitmodules  README.md  thread.cpp
Assignment 1/: CMakeLists.txt  thread.cpp  utimer.cpp
Assignment 2/: CMakeLists.txt  Map.cpp  thread.cpp
Assignment 3/: mutex_use.cpp
Assignment 4/: CMakeLists.txt
Assignment1/: Results.txt  asyncs.cpp  thread  thread.cpp
Assignment2/: async.cpp
Assignment3/: CMakeLists.txt  barrier.cpp  class_conditionTry.cpp
Assignment4/: placeholder_pool.cpp  thread_pool.cpp  thread_pool_omp.cpp
Assignment4_5/: omp.cpp
Assignment6/: CMakeLists.txt  implementation.cpp
Assignment7/: map  stencil  stencil.cpp  stencil_ff.cpp  stencil_pthread.cpp
Jacobi_PRJ/: CMakeLists.txt  Jacobi_async.cpp  Jacobi_barrier.cpp  Jacobi_fastflow.cpp  Jacobi_fastflowBAR.cpp  Jacobi_sequential.cpp  Jacobi_std.cpp  Jacobi_threadPool.cpp  Makefile  Results.xlsx  average.sh  barrier_jac.cpp  comparison.sh  escalation.sh  ex_amdahl.sh  ex_average.sh  ex_escalation.sh  ex_gustaffson.sh  experiments.sh  ff_reduce.cpp  ff_test  gustaf.txt  main  main.cpp  main1  par  parallel_std  parallel_std.cpp  red  reduce.cpp  reduce_test.cpp  seq  sequential  sequential.cpp  test  test.cpp
Jacobi_PRJ/experiments/: ex_amdahl.sh  ex_gustaffson.sh
Jacobi_PRJ/lib/: linear_system.hpp
Jacobi_PRJ/results/: Results.xlsx  amdahl.txt
Jacobi_backup/: CMakeLists.txt  Jacobi_async.cpp  Jacobi_barrier.cpp  Jacobi_fastflowBAR.cpp  Jacobi_fastflowFARM.cpp  Jacobi_fastflowPAR.cpp  Jacobi_sequential.cpp  Jacobi_threadPool.cpp  Makefile  Pipeline.cpp  ex_average.sh  ex_escalation.sh  seq  test
Jacobi_backup/lib/: linear_system.hpp  utimer.hpp
Jacobi_backup/results/: Results.xlsx
Map/: CMakeLists.txt  MapConfig.h.in
Map_STD/: translator.1.cpp
Map_STD/lib/: CMakeLists.txt
Mutex and Asyncs/: CMakeLists.txt  fibo1.cpp  fibo2.cpp  sharedqueue.cpp  sharingproblem.cpp
Parallel_Jacobi/: CMakeLists.txt  Jacobi_fastflow.cpp  Jacobi_sequential.cpp  Jacobi_std.cpp  Makefile  README.md
Parallel_Jacobi/experiments/: amdahl.sh  average.sh  ex_average.sh
Parallel_Jacobi/lib/: linear_system.hpp  utimer.hpp
Pipeline_FF/: CMakeLists.txt  pipe  pipeline.cpp
ProvaBarrier/: CMakeLists.txt  main.cpp  utimer.cpp
Reduce/: CMakeLists.txt  pthreads.c  redpar.cpp  redredpar.cpp  threads.cpp
Reduce_STD/: pthreads_safe.c  redseq.cpp  thread_s.exe.stackdump  threads_b2.cpp
barrierWorks/: CMakeLists.txt  main.cpp
fastflow_src/: main.cpp  pipeline.cpp
(+2 files in other folders)
